...
  @override
  Widget build(BuildContext context) => Scaffold(
    appBar: AppBar(
      title: const Text('TV Series'),
      actions: [
        IconButton(
          key: const Key('tv_search_action'),
          icon: const Icon(Icons.search),
          onPressed: () => Navigator.pushNamed(context, SearchTvPage.routeName),
        ),
        IconButton(
          key: const Key('tv_watchlist_action'),
          icon: const Icon(Icons.bookmark),
          onPressed: () =>
              Navigator.pushNamed(context, WatchlistTvPage.routeName),
        ),
      ],
    ),
...
